--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,7 @@
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta
-            name="description"
-            content="Web site created using create-react-app"
-        />
+        <meta name="description" content="코로나19 제주 보건소 및 지정병원" />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -34,10 +31,14 @@
             type="text/javascript"
             src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=26ba2oaskk"
         ></script>
-        <title>React App</title>
+        <title>코로나19 제주 보건소 및 지정병원</title>
     </head>
     <body>
-        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <noscript
+            >JavaScript를 활성하해야 웹 앱을 실행할 수 있습니다. 이 메세지가
+            계속 출력된다면, 최신 브라우저를 사용해 주세요. You need to enable
+            JavaScript to run this app.</noscript
+        >
         <div id="root"></div>
         <!--
       This HTML file is a template.
